Project

General

Profile

Actions

Bug #10623

closed

rb_hash_delete() can return Qundef in 2.2-rc1

Bug #10623: rb_hash_delete() can return Qundef in 2.2-rc1

Added by tmm1 (Aman Karmani) almost 12 years ago. Updated almost 12 years ago.

Status:
Closed
Assignee:
-
Target version:
ruby -v:
ruby 2.2.0dev [x86_64-darwin14]
[ruby-core:66989]

Description

The behavior of rb_hash_delete() has changed from 2.1. Before, it would always return Qnil or VALUE. Now it can also return Qundef, which is breaking the posix-spawn gem's usage:

https://github.com/rtomayko/posix-spawn/blob/master/ext/posix-spawn.c#L242-L258

It also appears RTEST(Qundef) returns true, which causes a segfault in posix-spawn gem here:

https://github.com/rtomayko/posix-spawn/blob/master/ext/posix-spawn.c#L425

I think we should revert back to original behavior before 2.2.0 is released.


Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #10413: Unexpected block invocation with unknown keywordsClosedko1 (Koichi Sasada)Actions
Actions

Also available in: PDF Atom