* hash.c (rb_hash_delete): return Qnil if there are no corresponding   entry. [Bug #10623] * hash.c (rb_hash_delete_entry): try delete and return Qundef if there   are no corresponding entry. * internal.h: add rb_hash_delete_entry()'s declaration. * symbol.c: use rb_hash_delete_entry(). * thread.c: use rb_hash_delete_entry(). * ext/-test-/hash/delete.c: use rb_hash_delete_entry().

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@48958 b2dd03c8-39d4-4d8f-98ff-823fe69b080e