ext/-test-/hash/delete.c
@@ -3,7 +3,7 @@
 static VALUE
 hash_delete(VALUE hash, VALUE key)
 {
-    VALUE ret = rb_hash_delete(hash, key);
+    VALUE ret = rb_hash_delete_entry(hash, key);
     return ret == Qundef ? Qnil : rb_ary_new_from_values(1, &ret);
 }
 
